force-app/main/default/objects/Warranty_Claim_Line__c/Warranty_Claim_Line__c.object-meta.xml
<CustomObject>
    <description>Stores component-level requested actions and coverage decisions for a warranty claim.</description>
    <label>Warranty Claim Line</label>
    <nameField>
        <displayFormat>WCL-{000000}</displayFormat>
        <label>Warranty Claim Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Claim Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>