force-app/main/default/objects/Warranty_Claim_Line__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Display Assembly</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Charging Port</fullName>
                <default>true</default>
                <label>Charging Port</label>
            </value>
            <value>
                <fullName>Thermal Module</fullName>
            </value>
            <value>
                <fullName>Motherboard</fullName>
            </value>
            <value>
                <fullName>SSD</fullName>
            </value>
            <value>
                <fullName>Operating System</fullName>
            </value>
            <value>
                <fullName>Chassis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>