force-app/main/default/objects/Warranty_Claim_Line__c/fields/Coverage_Result__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Result__c</fullName>
    <label>Coverage Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covered</fullName>
                <default>true</default>
                <label>Covered</label>
            </value>
            <value>
                <fullName>Not Covered</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Needs Documents</fullName>
            </value>
            <value>
                <fullName>Safety Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>