force-app/main/default/objects/Warranty_Claim_Line__c/fields/Decision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reason__c</fullName>
    <label>Decision Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>