force-app/main/default/objects/Warranty_Claim_Line__c/fields/Requested_Action__c.field-meta.xml
<CustomField>
    <fullName>Requested_Action__c</fullName>
    <label>Requested Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
                <default>true</default>
                <label>Repair</label>
            </value>
            <value>
                <fullName>Replace Part</fullName>
            </value>
            <value>
                <fullName>Diagnostics</fullName>
            </value>
            <value>
                <fullName>Firmware Reset</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>