force-app/main/default/objects/Warranty_Claim_Line__c/fields/Warranty_Claim__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claim__c</fullName>
    <label>Warranty Claim</label>
    <referenceTo>Warranty_Claim__c</referenceTo>
    <relationshipLabel>Warranty Claim Lines</relationshipLabel>
    <relationshipName>Warranty_Claim_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>